--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,15 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <p>Placeholder!</p>
+<main>
+
+  <div class="half green"></div>
+  <div class="half blue"></div>
+  <div class="third gray"></div>
+  <div class="third black"></div>
+  <div class="third gold"></div>
+
+</main>
 </body>
 </html>
