--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-  <p>Placeholder!</p>
+  <!--<p>Placeholder!</p>-->
 <main>
 
   <div class="half green"></div>
